<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_back"
        android:title="@string/back"
        android:icon="@drawable/ic_arrow_back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_forward"
        android:title="@string/forward"
        android:icon="@drawable/ic_arrow_forward"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_find"
        android:title="@string/find_in_page"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />

</menu>
